# Deconvolution

./: .gitignore  .properties  README.md  app.py  deconvolution.py  gui.py  main.py  peak_aggregation.py  pyproject.toml  requirements.txt
etc/: Deconvolver.ui  default.properties  files.txt
etc/deconvolution/: files.txt
etc/ellipses/: default.properties  files.txt
sample_data/: model.properties  signal_01.dpt  signal_02.dpt  signal_03.dpt  signal_04.dpt  signal_05.dpt
sample_data/deconvolution/: signal_01.dpt  signal_02.dpt  signal_03.dpt  signal_04.dpt  signal_05.dpt
sample_data/ellipses/: coated_107_both.tsv  coated_63_long.tsv  coated_63_short.tsv  coated_85_long.tsv  coated_85_short.tsv
src/: deconvolution.py  deconvolution_tab_tk.py  ellipses.py  ellipses_tab_tk.py  ellypses.py  gui.py  gui_qt.py  gui_tk.py  main.py  main_qt.py  main_tk.py
src/logic/: count_blobs.py  ellipses.py
src/tests/: test_deconvolution.py
src/ui/: deconvolution_tab.py  ellipses_tab.py  main_window.py  progress_textbox.py  properties_frame.py
tst/: deconvolution_test.py
