[tool.poetry]
name = "deconvolution"
version = "0.1.0"
description = "A program for deconvolving peaks from signals, may be used to analyze spectroscopy data"
authors = ["Janusz Slawek <janusz.slawek@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
tk = "^0.1.0"
customtkinter = "^5.2.2"
lmfit = "^1.3.4"
matplotlib = "^3.10.7"
pandas = "^2.3.3"
jproperties = "^2.1.2"
numpy = "^2.3.4"
click = "^8.3.0"
scikit-image = "^0.25.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
